<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="OperandoA">Operando A</string>
    <string name="OperandoB">Operando B</string>
    <string name="Sumar">+</string>
    <string name="Restar">-</string>
    <string name="Multiplicar">*</string>
    <string name="Dividir">/</string>
    <string name="Resto">%</string>
    <string name="Resultado">Resultado:</string>
    <string name="Realizar">Realice operación para obtener resultado</string>

</resources>
